--- a/index.css
+++ b/index.css
@@ -1,12 +1,16 @@
+
 body{
     height: 100vh;
     width: 95vw;
-    background-color: blue;
-    margin: 0;
+    background-color: rgb(5, 5, 237);
+    margin: auto;
+
+    
+     
 }
 
 .menu-header{
-    color: aliceblue;
+    color: rgb(16, 23, 224);
     justify-content: end;
     display: flex;
     flex-wrap: wrap;
@@ -18,7 +22,7 @@ body{
 }
 
 .menu-header li a{
-    color: aliceblue;
+    color: rgb(236, 240, 243);
     text-decoration: none;
     font-size: 18px;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -29,7 +33,7 @@ margin-left: 40px;
 }
 
 .menu-header li a:hover{
-    color: black;
+    color: rgb(1, 0, 9);
     transition: 1.0s;
 }
 
@@ -172,4 +176,77 @@ cursor: pointer;
     margin-left: 7vw;
     margin-top: 30px;
     width: 50vw;
+}
+
+#container-cofre{
+    background: linear-gradient(180deg,#0c2ce4 8.33%,rgba(5,39,101,0.745)100%),url(imagens/R\ caixa\ bacgr.jpeg);
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-evenly;
+    padding: 15rem;
+
+}
+
+#container-cofre img{
+    width: 40rem;
+    height: 25rem;
+    margin-top: 10rem;
+    text-align: center;
+}
+
+#container-cofre h2{
+    color: #e2e2ed;
+    font-size: 25px;
+    text-align: center;
+}
+
+#container-cofre p{
+    color: #b4acd7;
+    font-size: 17px;
+    text-align: center;
+    margin-top: 2rem;
+    font-weight: 700;
+}
+
+footer{
+    padding: 4rem;
+    background-color: #0c2ce4;
+    text-align: center;
+    color: #e4e4eb;
+    
+}
+
+footer div{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    color: #bb8c8c;
+    
+    
+
+ }
+
+footer div a{
+    text-decoration: none;
+    color: #0b0c09;
+
+    
+    
+    
+}
+
+
+footer div a:hover{
+    transition: 0.8s;
+    color: #cfcee1;
+}
+
+.footer-div p{
+    color: #231de2;
+    padding: 50px;
+    
 }
